--- a/html_practice.html
+++ b/html_practice.html
@@ -21,7 +21,7 @@
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
-                <li><a herf="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
