--- a/skills.html
+++ b/skills.html
@@ -15,12 +15,20 @@
             <ul>
                 <li><a href="html_practice.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="skills.html">Skills</a></li>
+                <li><a href="skills.html" class="active">Skills</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
     </header>
+    <main>
+        <h2>My Skills</h2>
+        <ul class="ul1">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Beginner JavaScript</li>
+            <li>Git and GitHub</li>
+        </ul>
 </body>
 </html>
